syntax="proto3";
option java_package="org.essaadani.springgrpcservice.grpc.stub";
// enums
enum AccountType{
  CURRENT_ACCOUNT=0;
  SAVING_ACCOUNT=1;
}
enum AccountState{
  CREATED=0;
  ACTIVATED=1;
  SUSPENDED=2;
  BLOCKED=3;
}
// define messages
message BankAccount{
  string accountId=1;
  double balance=2;
  int64  createdAt=3;
  AccountType accountType=4;
  AccountState accountState=5;
}

// define requests & responses
message GetBankAccountRequest{
  string accountId=1;
}

message GetBankAccountResponse{
  BankAccount account=1;
}

message GetAccountsListRequest{

}
message GetAccountsListResponse{
  repeated BankAccount bankAccount = 1;
}
message ConvertCurrencyRequest{
  string currencyFrom=1;
  string currencyTo=2;
  double amount=3;
}
message ConvertCurrencyResponse{
  string currencyFrom=1;
  string currencyTo=2;
  double amount=3;
  double conversionResult=4;
}
// define services
service BankService{
  rpc getBankAccount(GetBankAccountRequest) returns (GetBankAccountResponse);
  rpc getAccountsList(GetAccountsListRequest) returns (GetAccountsListResponse);
  rpc convertCurrency(ConvertCurrencyRequest) returns (ConvertCurrencyResponse);
}

